tests/parsing/smtlib/poly/errors/166_function_decl_par_bad_open_1.psmt2
(set-logic ALL)
(define-funs-rec ((foo (par _ ))))
